--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,7 +7,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval' 'unsafe-inline';"
     />
-    <title>DumpeX</title>
+    <title>Dumpio</title>
   </head>
   <body class="bg-gray-50 dark:bg-gray-900">
     <div id="root"></div>
